--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <img src="./assets/LOGO.png" alt="">
             <h1 class="header">NO IDEA ABOUT DISH...? DON'T WORRY.</h1>
             <p>Welcome to the <b>TASTY-SPOT</b>. Here you can get tasty random dish Daily with ingredients and you can also find your prefer food by searching.</p>
-            <div style="width: auto;height: auto;">
-                <input type="search" id="search-input" placeholder="Search Dish" >
-                <span id="search-icon"><a href="#search-result-meal" style="text-decoration: none;"><i class="fa fa-search" style="margin-left:-40px;cursor: pointer;color:rgba(0, 0, 0, 0.774);"></i></a></span>
-            </div>
+            
+            <input type="search" id="search-input" placeholder="Search Dish" >
+                <!-- <span id="search-icon"><a href="#search-result-meal" style="text-decoration: none;"><i class="fa fa-search" style="margin-left:-40px;cursor: pointer;color:rgba(0, 0, 0, 0.774);"></i></a></span> -->
+            
         </div>
     </div>
     <div id="random-container">
